<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="sans-serif-medium"
        android:backgroundTint="@color/lightSurfaceContainerHigh"
        app:icon="@drawable/ic_back_foreground"
        app:iconSize="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/admin_event_first_row_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_button"
        android:layout_margin="16dp"
        android:background="@drawable/card_corners">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/admin_event_poster_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/admin_event_poster"
                    android:layout_width="fill_parent"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:background="@drawable/rounded_corners"
                    android:contentDescription="Icon description"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_default_event_img_foreground" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/event_poster_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:paddingVertical="8dp"
                android:layout_marginStart="16dp">
                <TextView
                    android:id="@+id/admin_event_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/black"
                    android:padding="2dp"
                    android:textSize="40sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/admin_event_poster_layout" />

                <TextView
                    android:id="@+id/admin_event_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/lightOnSurfaceVariant"
                    android:padding="2dp"
                    android:textSize="25sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/admin_event_name" />

                <TextView
                    android:id="@+id/admin_event_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/lightOnSurfaceVariant"
                    android:padding="2dp"
                    android:textSize="25sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/admin_event_status" />

                <TextView
                    android:id="@+id/admin_event_spots"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/lightOnSurfaceVariant"
                    android:padding="2dp"
                    android:textSize="25sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/admin_event_location" />

                <TextView
                    android:id="@+id/admin_event_attendees"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/lightOnSurfaceVariant"
                    android:padding="2dp"
                    android:textSize="25sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/admin_event_spots" />

                <TextView
                    android:id="@+id/admin_event_dates"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/lightOnSurfaceVariant"
                    android:padding="2dp"
                    android:textSize="25sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/admin_event_attendees" />

                <TextView
                    android:id="@+id/admin_event_geo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/lightOnSurfaceVariant"
                    android:padding="2dp"
                    android:textSize="25sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/admin_event_dates" />

                <TextView
                    android:id="@+id/admin_event_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/lightOnSurfaceVariant"
                    android:padding="2dp"
                    android:textSize="25sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/admin_event_geo" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/admin_event_first_row_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/admin_delete_event"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/admin_delete_event_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="16dp"
            android:backgroundTint="@color/lightSurfaceContainerHigh"
            android:text="Remove Image"
            android:fontFamily="sans-serif-medium"
            app:icon="@drawable/ic_trash_foreground"
            app:iconSize="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/admin_delete_event_qr" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/admin_delete_event_qr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="16dp"
            android:backgroundTint="@color/lightSurfaceContainerHigh"
            android:text="Remove QR Code"
            android:fontFamily="sans-serif-medium"
            app:icon="@drawable/ic_trash_foreground"
            app:iconSize="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/admin_delete_event_image"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/admin_delete_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="16dp"
        android:backgroundTint="@color/lightSurfaceContainerHigh"
        android:text="Remove Event"
        android:fontFamily="sans-serif-medium"
        app:icon="@drawable/ic_trash_foreground"
        app:iconSize="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>