<?xml version="1.0" encoding="utf-8"?>
<!--Code used from the following source for menu bar-->
<!--https://www.geeksforgeeks.org/bottom-navigation-bar-in-android/-->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="sans-serif-medium"
        android:backgroundTint="@color/lightSurfaceContainerHigh"
        app:icon="@drawable/ic_back_foreground"
        app:iconSize="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/browse_events_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingBottom="75dp"
        android:dividerHeight="16dp"
        android:divider="@color/colorBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_button" />

</androidx.constraintlayout.widget.ConstraintLayout>
